# native

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  app.zon  build.zig  build.zig.zon
.github/scripts/: glib272_error_allowlist.py  linux-canvas-smoke.sh  linux-dev-smoke.sh  windows-canvas-smoke.sh  windows-effects-smoke.sh
.github/workflows/: cef-runtime.yml  ci.yml  release.yml
assets/: native-sdk.manifest
changelog.d/: README.md  damage-aa-bleed.md  external-source-channel.md  gtk-create-view-debug-crash.md  journal-fingerprints.md  menu-bar-lifecycle.md  native-context-menus.md  native-only-host-windows.md  spawn-e2e-stability.md  ts-ternary-spread-arms.md  webview-stub-silent-compile.md  windows-cross-drive-sdk.md  windows-webview2-embedded-layer.md
docs/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
docs/src/: mdx-components.tsx
editors/native-markup/: README.md  extension.js  language-configuration.json  package.json
evals/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
evals/harness-lib/: cmdview.zig
evals/sandbox/: Dockerfile  build-image.sh
examples/: .gitignore  README.md
examples/android/app/src/main/cpp/: CMakeLists.txt  native_sdk.h  native_sdk_jni.c
scripts/: changelog-merge.sh  gate.sh  perf-gpu-dashboard.sh
src/: root.zig
tools/: audit_web_layer.zig  bench-render-budgets.txt  bench_render.zig  docs_component_previews.zig  docs_preview_scenes.zig  docs_wasm_preview.zig  generate_app_icon.zig  prepare-example-music.sh  print_pins.zig
(+742 files in other folders)
